# faquped

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml
faquped-frontend/: bun.lockb  index.html  package.json  tailwind.config.js  vite.config.js
faquped-frontend/src/: components.ts  http_status_codes.ts  main.ts  router.ts  routes.ts  style.css  toast-message.ts
faquped-frontend/src/routes/: index.ts  login.ts  signin.ts
faquped-frontend/src/tests/: router.test.ts
src/: env_args.rs  main.rs  state.rs
src/api/: error.rs  handlers.rs  mod.rs  response_wrapper.rs  state.rs  util.rs
src/api/auth/: handlers.rs  mod.rs
src/api/model/: mod.rs  structs.rs
src/jwt/: extractor.rs  mod.rs
