[package]
name = "faquped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["macros", "headers"]}
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = { version = "9.1.0", features = ["use_pem"] }
log = "0.4.20"
once_cell = "1.18.0"
ring = "0.17.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_valid = "0.16.3"
surrealdb = "1.0.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
